--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -25,7 +25,7 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/lcpscr/zqlcp.git"
-          source_branch: "master"
+          source_branch: "main"
           destination_branch: "main"
           github_token: ${{ secrets.PAT }}
       
