--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -1,5 +1,5 @@
 # File: .github/workflows/repo-sync.yml
-name: sync-Sunert-scripts
+name: sync-zq-scripts
 on:
   schedule:
     - cron: '1 0,12,22 * * *'
