--- a/.github/workflows/yd.yml
+++ b/.github/workflows/yd.yml
@@ -2,7 +2,7 @@ name: 跃动
 on:
   workflow_dispatch:
   schedule:
-     - cron: '17,44 5-22 * * *'
+     - cron: '17,44 * * * *'
   watch:
     types: started
 jobs:
