--- a/.github/workflows/ac.yml
+++ b/.github/workflows/ac.yml
@@ -3,7 +3,7 @@ name: 云扫码，番茄看看
 on:
   workflow_dispatch:
   schedule:
-     - cron: '23 5/9 * * *'
+     - cron: '0 5,15 * * *'
   watch:
     types: started
 jobs:
